@@ -1,6 +1,10 @@
 # -*- coding: utf-8; tab-width: 4; -*-
 # ex: set fileencoding=utf-8 softtabstop=4 tabstop=4 expandtab:
 
+2014-03-24 Michael Truog   <mjtruog [at] gmail (dot) com>
+
+    * Fix ec2 discovery groups/tags validation for syntax additions
+
 2014-03-21 Michael Truog   <mjtruog [at] gmail (dot) com>
 
     * Update nodefinder to add support for boolean expressions when using
